theme/bootstrapbase/less/moodle/core.less
/* ... */
/* TinyMCE moodle media preview frame should not have padding */
.core_media_preview.pagelayout-embedded #content {
    padding: 0;
}
.core_media_preview.pagelayout-embedded #maincontent {
    height: 0;
}
.core_media_preview.pagelayout-embedded .mediaplugin {
    margin: 0;
}
/** Fix YUI 2 Treeview for Right to left languages **/
.dir-rtl .ygtvtn,
.dir-rtl .ygtvtm,
.dir-rtl .ygtvtmh,
.dir-rtl .ygtvtmhh,
.dir-rtl .ygtvtp,
.dir-rtl .ygtvtph,
.dir-rtl .ygtvtphh,
.dir-rtl .ygtvln,
.dir-rtl .ygtvlm,
.dir-rtl .ygtvlmh,
.dir-rtl .ygtvlmhh,
.dir-rtl .ygtvlp,
.dir-rtl .ygtvlph,
.dir-rtl .ygtvlphh,
.dir-rtl .ygtvdepthcell,
.dir-rtl .ygtvok,
.dir-rtl .ygtvok:hover,
.dir-rtl .ygtvcancel,
.dir-rtl .ygtvcancel:hover {
    width: 18px;
    height: 22px;
    background-image: url([[pix:theme|yui2-treeview-sprite-rtl]]);
    background-repeat: no-repeat;
    cursor: pointer;
}
.dir-rtl .ygtvtn {
    background-position: 0 -5600px;
}
.dir-rtl .ygtvtm {
    background-position: 0 -4000px;
}
.dir-rtl .ygtvtmh,
.dir-rtl .ygtvtmhh {
    background-position: 0 -4800px;
}
.dir-rtl .ygtvtp {
    background-position: 0 -6400px;
}
.dir-rtl .ygtvtph,
.dir-rtl .ygtvtphh {
    background-position: 0 -7200px;
}
.dir-rtl .ygtvln {
    background-position: 0 -1600px;
}
.dir-rtl .ygtvlm {
    background-position: 0 0;
}
.dir-rtl .ygtvlmh,
.dir-rtl .ygtvlmhh {
    background-position: 0 -800px;
}
.dir-rtl .ygtvlp {
    background-position: 0 -2400px;
}
.dir-rtl .ygtvlph,
.dir-rtl .ygtvlphh {
    background-position: 0 -3200px
}
.dir-rtl .ygtvdepthcell {
    background-position: 0 -8000px;
}
.dir-rtl .ygtvok {
    background-position: 0 -8800px;
}
.dir-rtl .ygtvok:hover {
    background-position: 0 -8844px;
}
.dir-rtl .ygtvcancel {
    background-position: 0 -8822px;
}
.dir-rtl .ygtvcancel:hover {
    background-position: 0 -8866px;
}
.dir-rtl.yui-skin-sam .yui-panel .hd {
    text-align: right;
}
.dir-rtl .yui-skin-sam .yui-layout .yui-layout-unit div.yui-layout-bd {
    text-align: right;
}
/** Fix TinyMCE editor right to left **/
.dir-rtl .clearlooks2.ie9 .mceAlert .mceMiddle span,.dir-rtl .clearlooks2 .mceConfirm .mceMiddle span {
    top: 44px;
}
.dir-rtl .o2k7Skin table,
.dir-rtl .o2k7Skin tbody,
.dir-rtl .o2k7Skin a,
.dir-rtl .o2k7Skin img,
.dir-rtl .o2k7Skin tr,
.dir-rtl .o2k7Skin div,
.dir-rtl .o2k7Skin td,
.dir-rtl .o2k7Skin iframe,
.dir-rtl .o2k7Skin span,
.dir-rtl .o2k7Skin *,
.dir-rtl .o2k7Skin .mceText,
.dir-rtl .o2k7Skin .mceListBox .mceText {
    text-align: right;
}
.path-rating .ratingtable {
    width: 100%;
    margin-bottom: 1em;
}
.path-rating .ratingtable th.rating {
    width: 100%;
}
.path-rating .ratingtable td.rating,
.path-rating .ratingtable td.time {
    white-space: nowrap;
    text-align: center;
}
.initialbar a {
    padding-right: 2px;
}
/* Moodle Dialogue Settings (moodle-core-dialogue)  */
.moodle-dialogue-base .moodle-dialogue-lightbox {
    background-color: #AAA;
}
.moodle-dialogue-base .hidden,
.moodle-dialogue-base .moodle-dialogue-hidden {
    display: none;
}
.no-scrolling {
    overflow: hidden;
}
.moodle-dialogue-base .moodle-dialogue-fullscreen {
    left: 0px;
    top: 0px;
    right: 0px;
    bottom: -50px;
    position: fixed;
}
.moodle-dialogue-base .moodle-dialogue-fullscreen .closebutton {
    width: 28px;
    height: 16px;
    background-size: 100%;
}
.moodle-dialogue-base .moodle-dialogue {
    padding: 0;
    margin: 0;
    background: none;
    border: none;
    z-index: 600;
    outline: #000 dotted 0;
}
.moodle-dialogue-base .moodle-dialogue-wrap {
    margin-top: -3px;
    margin-left: -3px;
    background-color: #fff;
    border: 1px solid #ccc;
    .border-radius(10px);
    .box-shadow(5px 5px 20px 0 #666);
}
.moodle-dialogue-base .moodle-dialogue-wrap .moodle-dialogue-hd {
    margin: 0;
    padding: 5px;
    font-size: 12px;
    font-weight: normal;
    letter-spacing: 1px;
    color: #333;
    text-align: center;
    text-shadow: 1px 1px 1px #fff;
    .border-radius(10px 10px 0 0);
    border-bottom: 1px solid #bbb;
    background: #ccc;
    #gradient > .vertical(#fff, #ccc);
    filter: dropshadow(color=#FFFFFF, offx=1, offy=1);
}
.moodle-dialogue-base .moodle-dialogue-wrap .moodle-dialogue-hd h1 {
    margin: 0;
    padding: 0;
    display: inline;
    font-size: 100%;
    font-weight: bold;
}
.moodle-dialogue-base .moodle-dialogue-wrap .moodle-dialogue-hd .yui3-widget-buttons {
    padding: 5px;
}
.moodle-dialogue-base .closebutton {
    width: 25px;
    height: 15px;
    float: right;
    vertical-align: middle;
    display: inline-block;
    cursor: pointer;
    padding: 0;
    background-image: url([[pix:theme|sprite]]);
    background-repeat: no-repeat;
    border-style: none;
}
.dir-rtl .moodle-dialogue-base .moodle-dialogue-wrap .moodle-dialogue-hd .yui3-widget-buttons {
    left: 0;
    right: auto;
}
.moodle-dialogue-base .moodle-dialogue .moodle-dialogue-bd {
    overflow: auto;
    padding: 1em;
    line-height: 2em;
    color: #555;
    font-size: 12px;
}
.moodle-dialogue-base .moodle-dialogue-wrap .moodle-dialogue-content {
    padding: 0;
    background: #FFF;
}

.moodle-dialogue-base .moodle-dialogue-fullscreen .moodle-dialogue-hd {
    padding: 10px;
    font-size: 16px;
}

.moodle-dialogue-base .moodle-dialogue-fullscreen .moodle-dialogue-content {
    overflow: auto;
    position: absolute;
    top: 0px;
    bottom: 50px;
    left: 0px;
    right: 0px;
    margin: 0px;
    border: 0px;
}
.moodle-dialogue-base .moodle-dialogue-fullscreen .moodle-dialogue-hd,
.moodle-dialogue-base .moodle-dialogue-fullscreen .moodle-dialogue-wrap {
    border-radius: 0px;
}
.moodle-dialogue-confirm .confirmation-dialogue {
    text-align: center;
}
.moodle-dialogue-confirm .confirmation-dialogue input {
    text-align: center;
}
.moodle-dialogue-exception .moodle-exception-message {
    text-align: center
}
.moodle-dialogue-exception .moodle-exception-param label {
    font-weight: bold;
}
/* ... */

