MDL-42340 JavaScript: Stop dialogues forcing overflow - use CSS instead

--- a/theme/bootstrapbase/less/moodle/core.less
+++ b/theme/bootstrapbase/less/moodle/core.less
@@ -1426,6 +1426,9 @@ audio.mediaplugin_html5audio {
     bottom: -50px;
     position: fixed;
 }
+.moodle-dialogue-base .moodle-dialogue-fullscreen .moodle-dialogue-content {
+    overflow: auto;
+}
 .moodle-dialogue-base .moodle-dialogue-fullscreen .closebutton {
     width: 28px;
     height: 16px;
